# quickjs

./: CMakeLists.txt
msvc/libc/include/: ftw.h  pthread.h  string.h  unistd.h
msvc/libc/include/sys/: time.h
msvc/libc/src/: libc.c  tool.c
msvc/main/: msvc.c  pthread.h  stdlib.h
msvc/main/sys/: time.h
